# Copyright (c) Huawei Technologies Co., Ltd. 2021. All rights reserved.

import("//drivers/peripheral/camera/hal/camera.gni")

if (defined(ohos_lite)) {
  copy("driver_adapter") {
    sources = [ "//device/hisilicon/hardware/media/hal/camera/libs/hispark_taurus/libdriver_adapter.so" ]
    outputs = [ "$root_out_dir/{{source_file_part}}" ]
  }
} else {
  import("//build/ohos.gni")
  import("//drivers/adapter/uhdf2/uhdf.gni")

  ohos_prebuilt_etc("driver_adapter") {
    if (use_musl) {
      source = "//device/hisilicon/hardware/media/hal/camera/libs/hispark_taurus/libdriver_adapter.z.so"
    } else {
      source = "//device/hisilicon/hardware/media/hal/camera/libs/hispark_taurus/std/libdriver_adapter.z.so"
    }
    module_install_dir = "lib/"
    part_name = "hdf"
    subsystem_name = "hdf"
  }
}
